// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`walker calls the callback for each given HTML token 1`] = `
Array [
  "<html",
  "<",
  0,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 0,
    "state": "open",
    "tagName": "html",
  },
  Array [
    Object {
      "openIndex": 0,
      "state": "open",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 2`] = `
Array [
  ">",
  ">",
  5,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 5,
    "openIndex": 0,
    "state": "content",
    "tagName": "html",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 3`] = `
Array [
  "<head",
  "<",
  6,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 6,
    "state": "open",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 6,
      "state": "open",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 4`] = `
Array [
  ">",
  ">",
  11,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 11,
    "openIndex": 6,
    "state": "content",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 11,
      "openIndex": 6,
      "state": "content",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 5`] = `
Array [
  "</head",
  "</",
  12,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 6`] = `
Array [
  ">",
  ">",
  18,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 18,
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 18,
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 7`] = `
Array [
  "<body",
  "<",
  19,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 19,
    "state": "open",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 19,
      "state": "open",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 8`] = `
Array [
  ">",
  ">",
  24,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 24,
    "openIndex": 19,
    "state": "content",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 9`] = `
Array [
  "<img",
  "<",
  25,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 10`] = `
Array [
  "/>",
  "/>",
  30,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 30,
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 30,
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 11`] = `
Array [
  "<!--",
  "<",
  32,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 12`] = `
Array [
  "-->",
  "-->",
  51,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 51,
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 51,
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 13`] = `
Array [
  "</body",
  "</",
  54,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 14`] = `
Array [
  ">",
  ">",
  60,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 60,
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 60,
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 15`] = `
Array [
  "</html",
  "</",
  61,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 16`] = `
Array [
  ">",
  ">",
  67,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 67,
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closeIndex": 67,
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker calls the callback for each given HTML token 17`] = `16`;

exports[`walker calls the callback for each given HTML token 18`] = `"<html><head></head><body><img /><!-- ignore tis plx--></body></html>"`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 1`] = `
Array [
  "<html",
  "<",
  0,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 0,
    "state": "open",
    "tagName": "html",
  },
  Array [
    Object {
      "openIndex": 0,
      "state": "open",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 2`] = `
Array [
  ">",
  ">",
  5,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 5,
    "openIndex": 0,
    "state": "content",
    "tagName": "html",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 3`] = `
Array [
  "<head",
  "<",
  6,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 6,
    "state": "open",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 6,
      "state": "open",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 4`] = `
Array [
  ">",
  ">",
  11,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 11,
    "openIndex": 6,
    "state": "content",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 11,
      "openIndex": 6,
      "state": "content",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 5`] = `
Array [
  "</head",
  "</",
  12,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 6`] = `
Array [
  ">",
  ">",
  18,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 18,
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 18,
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 7`] = `
Array [
  "<body",
  "<",
  19,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 19,
    "state": "open",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 19,
      "state": "open",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 8`] = `
Array [
  ">",
  ">",
  24,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 24,
    "openIndex": 19,
    "state": "content",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 9`] = `
Array [
  "<img",
  "<",
  25,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 10`] = `
Array [
  "/>",
  "/>",
  30,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 30,
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 30,
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 11`] = `
Array [
  "<!--",
  "<",
  32,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 12`] = `
Array [
  "-->",
  "-->",
  51,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 51,
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 51,
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 13`] = `
Array [
  "</body",
  "</",
  54,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 14`] = `
Array [
  ">",
  ">",
  60,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 60,
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 60,
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 15`] = `
Array [
  "</html",
  "</",
  61,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 16`] = `
Array [
  ">",
  ">",
  67,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 67,
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closeIndex": 67,
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 17`] = `16`;

exports[`walker doesn't mutate the output if the callback doesn't explicitly return a string value 18`] = `"<html><head></head><body><img /><!-- ignore tis plx--></body></html>"`;

exports[`walker gives correct coordinates when the HTML is changed 1`] = `
Array [
  "<html",
  "<",
  0,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 0,
    "state": "open",
    "tagName": "html",
  },
  Array [
    Object {
      "openIndex": 0,
      "state": "open",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 2`] = `
Array [
  ">",
  ">",
  5,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 5,
    "openIndex": 0,
    "state": "content",
    "tagName": "html",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 3`] = `
Array [
  "<head",
  "<",
  6,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 6,
    "state": "open",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 6,
      "state": "open",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 4`] = `
Array [
  ">",
  ">",
  11,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 11,
    "openIndex": 6,
    "state": "content",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 11,
      "openIndex": 6,
      "state": "content",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 5`] = `
Array [
  "</head",
  "</",
  12,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 6`] = `
Array [
  ">",
  ">",
  18,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 18,
    "closingIndex": 12,
    "contentIndex": 11,
    "openIndex": 6,
    "state": "closing",
    "tagName": "head",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 18,
      "closingIndex": 12,
      "contentIndex": 11,
      "openIndex": 6,
      "state": "closing",
      "tagName": "head",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 7`] = `
Array [
  "<body",
  "<",
  19,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 19,
    "state": "open",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "openIndex": 19,
      "state": "open",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 8`] = `
Array [
  ">",
  ">",
  24,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "contentIndex": 24,
    "openIndex": 19,
    "state": "content",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 9`] = `
Array [
  "<img",
  "<",
  25,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 10`] = `
Array [
  "/>",
  "/>",
  30,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 30,
    "openIndex": 25,
    "state": "open",
    "tagName": "img",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 30,
      "openIndex": 25,
      "state": "open",
      "tagName": "img",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 11`] = `
Array [
  "<!--",
  "<",
  32,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 12`] = `
Array [
  "-->",
  "-->",
  51,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 51,
    "openIndex": 32,
    "state": "open",
    "tagName": "!--",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "contentIndex": 24,
      "openIndex": 19,
      "state": "content",
      "tagName": "body",
    },
    Object {
      "closeIndex": 51,
      "openIndex": 32,
      "state": "open",
      "tagName": "!--",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 13`] = `
Array [
  "</body",
  "</",
  54,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 14`] = `
Array [
  ">",
  ">",
  60,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 60,
    "closingIndex": 54,
    "contentIndex": 24,
    "openIndex": 19,
    "state": "closing",
    "tagName": "body",
  },
  Array [
    Object {
      "contentIndex": 5,
      "openIndex": 0,
      "state": "content",
      "tagName": "html",
    },
    Object {
      "closeIndex": 60,
      "closingIndex": 54,
      "contentIndex": 24,
      "openIndex": 19,
      "state": "closing",
      "tagName": "body",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 15`] = `
Array [
  "</html",
  "</",
  61,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 16`] = `
Array [
  ">",
  ">",
  67,
  "<html><head></head><body><img /><!-- ignore tis plx--></body></html>",
  Object {
    "closeIndex": 67,
    "closingIndex": 61,
    "contentIndex": 5,
    "openIndex": 0,
    "state": "closing",
    "tagName": "html",
  },
  Array [
    Object {
      "closeIndex": 67,
      "closingIndex": 61,
      "contentIndex": 5,
      "openIndex": 0,
      "state": "closing",
      "tagName": "html",
    },
  ],
]
`;

exports[`walker gives correct coordinates when the HTML is changed 17`] = `16`;

exports[`walker gives correct coordinates when the HTML is changed 18`] = `"<html autocomplete=\\"off\\"> autocomplete=\\"off\\"<head autocomplete=\\"off\\"> autocomplete=\\"off\\"</head autocomplete=\\"off\\"> autocomplete=\\"off\\"<body autocomplete=\\"off\\"> autocomplete=\\"off\\"<img autocomplete=\\"off\\" /> autocomplete=\\"off\\"<!-- autocomplete=\\"off\\" ignore tis plx--> autocomplete=\\"off\\"</body autocomplete=\\"off\\"> autocomplete=\\"off\\"</html autocomplete=\\"off\\"> autocomplete=\\"off\\""`;

exports[`walker throws an error if no callback is supplied 1`] = `"A callback is required!"`;
